# aetcd

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  Makefile  README.md  README.rst  codecov.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  ci.yml  main.yml
aetcd/: __init__.py  client.py  exceptions.py  leases.py  locks.py  members.py  rtypes.py  transactions.py  utils.py  watch.py  watcher.py
aetcd/rpc/: __init__.py  auth_pb2.py  auth_pb2_grpc.py  kv_pb2.py  kv_pb2_grpc.py  rpc_pb2.py  rpc_pb2_grpc.py
aetcd3/: __init__.py  client.py  events.py  exceptions.py  leases.py  locks.py  members.py  transactions.py  utils.py  watch.py
aetcd3/etcdrpc/: auth_pb2.py  kv_pb2.py  rpc_grpc.py  rpc_pb2.py
aetcd3/rpc/: rpc_grpc.py  rpc_pb2.py
docs/: Makefile  changelog.rst  client.rst  conf.py  contributing.rst  guide.rst  history.rst  index.rst  installation.rst  reference.rst  usage.rst
docs/reference/: client.rst  events.rst  exceptions.rst  leases.rst  locks.rst  members.rst  rtypes.rst  utils.rst  watcher.rst
etcd3aio/: __init__.py  client.py  watch.py
proto/: auth.proto  rpc.proto
requirements/: base.txt  test.txt
tests/: conftest.py  test_client.py  test_etcd3aio.py  test_exceptions.py  test_module.py  test_rtypes.py  test_utils.py  test_watcher.py
tests/integration/: conftest.py  test_auth.py  test_cluster.py  test_kv.py  test_lease.py  test_lock.py  test_maintenance.py  test_watch.py
